--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block title %} {{ course.title }} {% endblock %}
 {% block content%}
-<article>
+<article class="card">
   <h2>{{ course.title }}</h2>
   {{ course.description }}
 
