--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %} {% block title %} {{ course.title }} {% endblock %}
 {% block content%}
 <article class="card">
-  <h2>{{ course.title }}</h2>
-  {{ course.description }}
+  <h2 class="welcome">{{ course.title }}</h2>
+  <h4 class="welcome">{{ course.description }}</h4>
 
-  <section>
+  <section class="welcome">
     {% for step in course.step_set.all%}
     <h3>
       <a
